--- a/bin.html
+++ b/bin.html
@@ -12,7 +12,7 @@
     	</div>
   	</header>
   	<div class="container">
-  		<p id="dis">Загадайте число от 1 до 100</p>
+  		<p id="description">Загадайте число от 1 до 100</p>
   		<p id="x">Это число <span id="num1"></span>?</p>
   		
   		<button onclick="win()" id="but1">Да </button>
@@ -46,7 +46,7 @@
 		but2.style.display = "none";
 		but1.style.display = "none";
 		but1.style.display = "none";
-		dis.style.display = "none";
+		description.style.display = "none";
 	}
 </script>
 </html>
